Add chat bubbles

--- a/src/renderer/theme/_smui-theme.scss
+++ b/src/renderer/theme/_smui-theme.scss
@@ -4,7 +4,7 @@
 
 // Svelte Colors!
 @use "@material/theme/index" as theme with (
-  $primary: #00c600,
+  $primary: #227d22,
   $secondary: #676778,
   $surface: #fff,
   $background: #fff,
