--- a/src/renderer/theme/dark/_smui-theme.scss
+++ b/src/renderer/theme/dark/_smui-theme.scss
@@ -4,7 +4,7 @@
 
 // Svelte Colors! (Dark Theme)
 @use "@material/theme/index" as theme with (
-  $primary: #00c600,
+  $primary: #227d22,
   $secondary: color.scale(#676778, $whiteness: -10%),
   $surface: color.adjust(color-palette.$grey-900, $blue: +4),
   $background: #202324,
